--- a/login/src/index.css
+++ b/login/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap');
 
 @tailwind base;
@@ -55,7 +55,7 @@
 body {
   overflow: hidden;
   height: 100vh;
-  font-family: 'Lexend', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 /* --- Global Standard Form Styles --- */
