--- a/login/src/assets/components/Developers/Developers.css
+++ b/login/src/assets/components/Developers/Developers.css
@@ -109,6 +109,8 @@
     height: 100%;
     border-radius: 50%;
     object-fit: cover;
+    object-position: top center;
+    /* Focus on faces/top of image */
     /* No border in reference, just the image */
 }
 
